# src/backend/api/src/main/java/dev/agasen/ecom/api/core/order/rest/OrderRestController.java
@@ -1,5 +1,7 @@
 package dev.agasen.ecom.api.core.order.rest;
 
+import java.util.List;
+
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -21,6 +23,6 @@ public interface OrderRestController {
   Mono<Inventory> getOrderInventory(@PathVariable(value = "productId") Long productId);
 
   @GetMapping("/orders")
-  Flux<OrderDetails> getOrders();
+  Mono<List<PurchaseOrder>> getOrders();
 
 }
